# ghosty

./: README.md  pyproject.toml
src/ghosty/: __init__.py
