[tool.poetry]
name = "ghosty"
version = "0.1.0"
description = "password authentication manager which supports both creating and storing passwords securely and efficiently"
authors = ["adriftible <boxeigit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.6.0"
attrs = "^23.1.0"
bcrypt = "^4.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
